[tool.poetry]
name = "sampo"
version = "0.1.1.100"
description = "Open-source framework for adaptive manufacturing processes scheduling"
authors = ["iAirLab <iairlab@yandex.ru>"]
license = "BSD-3-Clause"
# readme = "README.rst"
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
sortedcontainers = ">=2.4.0,<2.5.0"
numpy = ">=1.23.5,<1.24.0"
pandas = ">=1.5.2,<1.6.0"
scipy = ">=1.9.3,<1.10.0"
toposort = ">=1.7,<2.0"
deap = ">=1.3.3,<1.4.0"
seaborn = ">=0.12.1,<0.13.0"
matplotlib = ">=3.6.2,<3.7.0"
plotly = ">=5.11.0,<5.12.0"
pytest = ">=7.2.0,<7.3.0"
pathos = ">=0.3.0,<0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
