[tool.poetry]
name = "sampo"
version = "0.1.1.231"
description = "Open-source framework for adaptive manufacturing processes scheduling"
authors = ["iAirLab <iairlab@yandex.ru>"]
license = "BSD-3-Clause"
# readme = "README.rst"
# readme = "README.md"
# build = "build.py"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
sortedcontainers = ">=2.4.0,<2.5.0"
numpy = ">=1.23.5"
pandas = ">=2.0.0"
scipy = ">=1.9.3,<1.10.0"
toposort = ">=1.7,<2.0"
deap = ">=1.3.3,<1.4.0"
seaborn = ">=0.12.1,<0.13.0"
matplotlib = ">=3.6.2,<3.7.0"
plotly = ">=5.17.0,<5.18.0"
pytest = ">=7.2.0,<7.3.0"


[build-system]
requires = ["poetry>=1.1.0a6", "wheel", "setuptools", "numpy"]
build-backend = "poetry.masonry.api"
